# naehte

./: .gitmodules  .travis.yml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
assets/: preface-colophon.tex  readme.txt  stylesheet.ily  triple-diamond.ly
naehte/: ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  actions.py  library.py  stylesheet.ily  tools.py
naehte/builds/_assets/: circle.ly  cross-string.ly  double-diamond.ly  half-harmonic.ly  natural-harmonic.ly  preface-body.tex  preface-colophon.tex
naehte/builds/arch-a-score/: .01.ily.tags  .02.ily.tags  .03.ily.tags  .04.ily.tags  .05.ily.tags  .06.ily.tags  .07.ily.tags  .08.ily.tags  .tags  __metadata__  __metadata__.py  back-cover.tex  front-cover.tex  layout.ily  layout.ly  layout.py  music.ly  playing-techniques.tex  preface.tex  stylesheet.ily
naehte/builds/assets/: circle.ly  cross-string.ly  damp.ly  double-diamond.ly  half-harmonic.ly  natural-harmonic.ly  stylesheet.ily  triple-diamond.ly  xfb.ly
naehte/etc/: to-do.md  to-do.txt
naehte/materials/: __init__.py
naehte/materials/instruments/: definition.py
naehte/materials/metronome_marks/: definition.py
naehte/sections/: stylesheet.ily
naehte/sections/01/: .metadata  .music.ily.tags  .music.ly.tags  .tags  .timing  __metadata__  layout.ly  (+7 more)
naehte/segments/: stylesheet.ily
naehte/stylesheets/: contexts.ily  markups.ily  stylesheet.ily
naehte/test/: .gitignore  test_materials.py  test_segments.py
naehte/tools/: ScoreTemplate.py  SegmentMaker.py
source/naehte/: library.py  stylesheet.ily
(+386 files in other folders)
