[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naehte"
version = "3.30"
description = "Nähte (2018) for cello"
authors = [{ name = "Trevor Bača", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.30"]

[project.urls]
Homepage = "https://github.com/trevorbaca/naehte"

[tool.setuptools]
packages = ["naehte"]
package-dir = { "" = "source" }
